crates/plotnik-tests/tests/04-emit/types/captures/builtin_does_not_legalize_optional_unlabeled_alternation.txt
Q = (program
  [
    (identifier)? @x :: bool
    {
      (identifier) @id
    }? @x :: bool
  ]
)
------------------ DIAGNOSTICS -------------------
error: `@x` has incompatible types `Node | null` and `{ id: Node } | null` across alternatives
 --> query.ptk:3:19
  |
3 |     (identifier)? @x :: bool
  |                   ^^
...
6 |     }? @x :: bool
  |        -- `@x` has type `{ id: Node } | null` here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type
